Added provider-specific watchlist columns
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1320 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.borsaitalia/plugin.xml
+++ b/org.eclipsetrader.borsaitalia/plugin.xml
@@ -31,5 +31,18 @@
          </description>
       </wizard>
    </extension>
+   <extension
+         point="org.eclipsetrader.core.providers">
+      <provider
+            class="org.eclipsetrader.borsaitalia.internal.ui.FeedIdentifierFactory"
+            id="org.eclipsetrader.borsaitalia.providers.symbol"
+            name="BorsaItaliana Symbol">
+      </provider>
+      <provider
+            class="org.eclipsetrader.borsaitalia.internal.ui.ISINFactory"
+            id="org.eclipsetrader.borsaitalia.providers.isin"
+            name="ISIN">
+      </provider>
+   </extension>
 
 </plugin>
