Added experimental shared launch and runtime configuration files
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1322 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.releng/build.xml
+++ b/org.eclipsetrader.releng/build.xml
@@ -102,6 +102,9 @@
 		<replace dir="${buildDirectory}/plugins" value="${buildId}" token="@build@">
 			<include name="**/about.mappings" />
 		</replace>
+		<replace dir="${buildDirectory}/features" value="${buildId}" token="@build@">
+			<include name="**/config.ini" />
+		</replace>
 
 		<java jar="${eclipse.launcher}" fork="true" dir="${basedir}">
 			<arg value="-application"/>
