Added generic historical data import wizard
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1324 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.charts/plugin.xml
+++ b/org.eclipsetrader.ui.charts/plugin.xml
@@ -244,5 +244,18 @@
          </enabledWhen>
       </page>
    </extension>
+   <extension
+         point="org.eclipse.ui.importWizards">
+      <wizard
+            category="org.eclipse.ui.Basic"
+            class="org.eclipsetrader.ui.internal.charts.DataUpdateWizard"
+            icon="icons/view16/linecharticon.gif"
+            id="org.eclipsetrader.ui.charts.update"
+            name="Historical Data">
+         <description>
+            Import / Update historical prices data.
+         </description>
+      </wizard>
+   </extension>
 
 </plugin>
