Added default backfill connector preference
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1326 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.platform/plugin_customization.ini
+++ b/org.eclipsetrader.platform/plugin_customization.ini
@@ -35,6 +35,9 @@ org.eclipsetrader.ui/EXIT_PROMPT_ON_CLOSE_LAST_WINDOW=true
 # default feed connector
 org.eclipsetrader.core/DEFAULT_CONNECTOR=org.eclipsetrader.yahoo
 
+# default backfill connector
+org.eclipsetrader.core/DEFAULT_BACKFILL_CONNECTOR=org.eclipsetrader.yahoo
+
 # Yahoo! Finance
 org.eclipsetrader.yahoo/DRIVER=org.eclipsetrader.yahoo.internal.core.connector.StreamingConnector
 org.eclipsetrader.yahoo/NEWS_UPDATE_INTERVAL=15
