--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -185,6 +185,11 @@
             id="org.eclipsetrader.ui.providers.Trend"
             name="Trend">
       </provider>
+      <provider
+            class="org.eclipsetrader.ui.internal.providers.PressureBarFactory"
+            id="org.eclipsetrader.ui.providers.pressure"
+            name="Pressure">
+      </provider>
    </extension>
    <extension
          point="org.eclipse.ui.newWizards">
