News plugin enhancements: added security news action, service factory, multiple news viewers
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1349 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.news/plugin.xml
+++ b/org.eclipsetrader.news/plugin.xml
@@ -73,5 +73,36 @@
             name="RSS News">
       </provider>
    </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="popup:org.eclipse.ui.popup.any?after=group.open">
+         <command
+               commandId="org.eclipsetrader.ui.file.open.news">
+            <visibleWhen>
+               <and>
+                  <count
+                        value="+">
+                  </count>
+                  <iterate
+                        operator="and">
+                     <adapt
+                           type="org.eclipsetrader.core.instruments.Security">
+                     </adapt>
+                  </iterate>
+               </and>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            categoryId="org.eclipse.ui.category.navigate"
+            defaultHandler="org.eclipsetrader.news.internal.ui.OpenNewsHandler"
+            id="org.eclipsetrader.ui.file.open.news"
+            name="Open News">
+      </command>
+   </extension>
 
 </plugin>
