More news plugin enhancements: provider headline storage, view icon decorator, other fixes
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1350 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.news/plugin.xml
+++ b/org.eclipsetrader.news/plugin.xml
@@ -104,5 +104,11 @@
             name="Open News">
       </command>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="org.eclipsetrader.news.internal.NewsUpdateStartup">
+      </startup>
+   </extension>
 
 </plugin>
