Yahoo news enhancements: implemented local storage, added non-us securities RSS feeds
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1351 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.yahoo/plugin.xml
+++ b/org.eclipsetrader.yahoo/plugin.xml
@@ -50,7 +50,7 @@
    <extension
          point="org.eclipsetrader.news.providers">
       <provider
-            class="org.eclipsetrader.yahoo.internal.news.NewsProvider"
+            class="org.eclipsetrader.yahoo.internal.news.NewsProviderFactory"
             id="org.eclipsetrader.news.yahoo"
             name="Yahoo! Finance">
       </provider>
