Updated default preferences
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1352 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.platform/plugin_customization.ini
+++ b/org.eclipsetrader.platform/plugin_customization.ini
@@ -32,15 +32,14 @@ org.eclipse.update.core/org.eclipse.update.core.updateVersions=compatible
 # confirm the exit from the application
 org.eclipsetrader.ui/EXIT_PROMPT_ON_CLOSE_LAST_WINDOW=true
 
-# default feed connector
+# default connectors
 org.eclipsetrader.core/DEFAULT_CONNECTOR=org.eclipsetrader.yahoo
-
-# default backfill connector
 org.eclipsetrader.core/DEFAULT_BACKFILL_CONNECTOR=org.eclipsetrader.yahoo
 
 # Yahoo! Finance
 org.eclipsetrader.yahoo/DRIVER=org.eclipsetrader.yahoo.internal.core.connector.StreamingConnector
 org.eclipsetrader.yahoo/NEWS_UPDATE_INTERVAL=15
+org.eclipsetrader.yahoo/HOURS_AS_RECENT=1
 org.eclipsetrader.yahoo/UPDATE_SECURITIES_NEWS=true
 org.eclipsetrader.yahoo/SUBSCRIBE_US_TOPSTORIES=true
 org.eclipsetrader.yahoo/SUBSCRIBE_US_MARKETS=true
