Implemented editable data providers
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1359 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -190,6 +190,11 @@
             id="org.eclipsetrader.ui.providers.pressure"
             name="Pressure">
       </provider>
+      <provider
+            class="org.eclipsetrader.ui.internal.providers.GainFactory"
+            id="org.eclipsetrader.ui.providers.gain"
+            name="Gain">
+      </provider>
    </extension>
    <extension
          point="org.eclipse.ui.newWizards">
