Added service launchers extension point and preferences
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1364 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.core/plugin.xml
+++ b/org.eclipsetrader.core/plugin.xml
@@ -6,5 +6,6 @@
    <extension-point id="org.eclipsetrader.core.connectors" name="Feed Connectors" schema="schema/connectors.exsd"/>
    <extension-point id="org.eclipsetrader.core.providers" name="Data Providers" schema="schema/providers.exsd"/>
    <extension-point id="org.eclipsetrader.core.brokers" name="Brokers" schema="schema/brokers.exsd"/>
+   <extension-point id="org.eclipsetrader.core.launchers" name="Launchers" schema="schema/launchers.exsd"/>
 
 </plugin>
