--- a/org.eclipsetrader.ui/plugin.properties
+++ b/org.eclipsetrader.ui/plugin.properties
@@ -20,3 +20,4 @@ marketsViewName = Markets
 repositoryExplorerViewName = Repository Explorer
 
 pluginsPreferencesPageName = Plugins
+launchersPreferencesPageName = Launchers
