--- a/org.eclipsetrader.core/plugin.xml
+++ b/org.eclipsetrader.core/plugin.xml
@@ -7,5 +7,18 @@
    <extension-point id="org.eclipsetrader.core.providers" name="Data Providers" schema="schema/providers.exsd"/>
    <extension-point id="org.eclipsetrader.core.brokers" name="Brokers" schema="schema/brokers.exsd"/>
    <extension-point id="org.eclipsetrader.core.launchers" name="Launchers" schema="schema/launchers.exsd"/>
+   <extension
+         point="org.eclipsetrader.core.launchers">
+      <launcher
+            class="org.eclipsetrader.core.internal.feed.FeedServiceLauncher"
+            id="org.eclipsetrader.feed.launcher"
+            name="Feed">
+      </launcher>
+      <launcher
+            class="org.eclipsetrader.core.internal.trading.TradingServiceLauncher"
+            id="org.eclipsetrader.trading.launcher"
+            name="Trading Service">
+      </launcher>
+   </extension>
 
 </plugin>
