Added news service launcher
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1371 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.news/plugin.xml
+++ b/org.eclipsetrader.news/plugin.xml
@@ -105,10 +105,12 @@
       </command>
    </extension>
    <extension
-         point="org.eclipse.ui.startup">
-      <startup
-            class="org.eclipsetrader.news.internal.NewsUpdateStartup">
-      </startup>
+         point="org.eclipsetrader.core.launchers">
+      <launcher
+            class="org.eclipsetrader.news.internal.NewsServiceLauncher"
+            id="org.eclipsetrader.news.launcher"
+            name="News Reader">
+      </launcher>
    </extension>
 
 </plugin>
