Added instruments import wizard
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1394 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.borsaitalia/plugin.xml
+++ b/org.eclipsetrader.borsaitalia/plugin.xml
@@ -30,6 +30,16 @@
             Import historical data from Borsa Italiana.
          </description>
       </wizard>
+      <wizard
+            category="org.eclipsetrader.ui.import.instruments"
+            class="org.eclipsetrader.borsaitalia.internal.ui.wizards.InstrumentsImportWizard"
+            icon="borsaitalia16.gif"
+            id="org.eclipsetrader.borsaitalia.importInstrument"
+            name="Borsa Italiana">
+         <description>
+            Import instruments from Borsa Italiana.
+         </description>
+      </wizard>
    </extension>
    <extension
          point="org.eclipsetrader.core.providers">
