--- a/org.eclipsetrader.borsaitalia/build.properties
+++ b/org.eclipsetrader.borsaitalia/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                borsaitalia16.gif,\
                borsaitalia32.gif,\
                icons/,\
-               epl-v10.html
+               epl-v10.html,\
+               data/
