Added progress view to perspectives
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1397 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.application/plugin.xml
+++ b/org.eclipsetrader.ui.application/plugin.xml
@@ -107,5 +107,14 @@
          </action>
       </actionSet>
    </extension>
-
+   <extension  
+         point="org.eclipse.ui.views">  
+      <view  
+            name="Progress View"  
+            icon="icons/eview16/pview.gif"  
+            category="org.eclipse.ui"  
+            class="org.eclipse.ui.ExtensionFactory:progressView"  
+            id="org.eclipse.ui.views.ProgressView">  
+      </view>  
+   </extension>  
 </plugin>
