Added Directa connector feature and branding
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1401 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.directa/about.ini
+++ b/org.eclipsetrader.directa/about.ini
@@ -8,13 +8,14 @@
 # dialog (translated).  Maximum 15 lines and 75 characters per line.
 aboutText=Directa Trading Connector\n\
 \n\
-Copyright (c) 2004, 2008 EclipseTrader Contributors and others. All rights reserved.\n\
+(c) Copyright EclipseTrader contributors and others 2004-2009.  All rights reserved.\n\
+\n\
 This program and the accompanying materials are made available under the\n\
 terms of the Eclipse Public License v1.0 which accompanies this distribution,\n\
 and is available at http://www.eclipse.org/legal/epl-v10.html\n
 
 # Property "featureImage" contains path to feature image (32x32)
-featureImage=feature.gif
+#featureImage=feature.gif
 
 # Property "welcomePerspective" contains the id of the perspective in which the
 # welcome page is to be opened.
