--- a/org.eclipsetrader.yahoo/build.properties
+++ b/org.eclipsetrader.yahoo/build.properties
@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
                yahoo32.gif,\
                icons/,\
                plugin.xml,\
+               about.ini,\
                data/
