--- a/org.eclipsetrader.directaworld/build.properties
+++ b/org.eclipsetrader.directaworld/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               epl-v10.html
+               epl-v10.html,\
+               about.ini
