--- a/org.eclipsetrader.releng/build.xml
+++ b/org.eclipsetrader.releng/build.xml
@@ -87,7 +87,9 @@
 
 			<export srcurl="${tag}/org.eclipsetrader.archipelago" destpath="${buildDirectory}/plugins/org.eclipsetrader.archipelago" revision="HEAD"/>
 			<export srcurl="${tag}/org.eclipsetrader.borsaitalia" destpath="${buildDirectory}/plugins/org.eclipsetrader.borsaitalia" revision="HEAD"/>
+
 			<export srcurl="${tag}/org.eclipsetrader.directaworld" destpath="${buildDirectory}/plugins/org.eclipsetrader.directaworld" revision="HEAD"/>
+			<export srcurl="${tag}/org.eclipsetrader.directaworld-feature" destpath="${buildDirectory}/features/org.eclipsetrader.directaworld" revision="HEAD"/>
 
 			<export srcurl="${tag}/org.eclipsetrader.yahoo" destpath="${buildDirectory}/plugins/org.eclipsetrader.yahoo" revision="HEAD"/>
 			<export srcurl="${tag}/org.eclipsetrader.yahoo-feature" destpath="${buildDirectory}/features/org.eclipsetrader.yahoo" revision="HEAD"/>
