--- a/org.eclipsetrader.repository.hibernate/build.properties
+++ b/org.eclipsetrader.repository.hibernate/build.properties
@@ -5,4 +5,6 @@ bin.includes = .,\
                plugin.xml,\
                icons/,\
                hibernate.png,\
-               schema/
+               schema/,\
+               hibernate32.png,\
+               about.ini
