--- a/org.eclipsetrader.ui.charts.indicators/plugin.xml
+++ b/org.eclipsetrader.ui.charts.indicators/plugin.xml
@@ -4,251 +4,292 @@
    <extension
          point="org.eclipsetrader.ui.indicators">
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.AD"
             description="Chaikin A/D Line"
             id="org.eclipsetrader.indicators.ad"
+            location="bottom"
             name="AD">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.ADX"
             description="A/D Movement Index"
             id="org.eclipsetrader.indicators.adx"
+            location="bottom"
             name="ADX">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.ADXR"
             description="A/D Movement Index Rating"
             id="org.eclipsetrader.indicators.adxr"
+            location="bottom"
             name="ADXR">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.ADOSC"
             description="Chaikin A/D Oscillator"
             id="org.eclipsetrader.indicators.adosc"
+            location="bottom"
             name="ADOSC">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.APO"
             description="Absolute Price Oscillator"
             id="org.eclipsetrader.indicators.apo"
+            location="bottom"
             name="APO">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.AROON"
             description="Aroon"
             id="org.eclipsetrader.indicators.aroon"
+            location="bottom"
             name="AROON">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.AROONOSC"
             description="Aroon Oscillator"
             id="org.eclipsetrader.indicators.aroonosc"
+            location="bottom"
             name="AROONOSC">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.AVGPRICE"
             description="Average Price"
-            exclusive="false"
             id="org.eclipsetrader.indicators.avgprice"
+            location="bottom"
             name="AVGPRICE">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.ATR"
             description="Average True Range"
             id="org.eclipsetrader.indicators.atr"
+            location="bottom"
             name="ATR">
       </indicator>
       <indicator
             class="org.eclipsetrader.ui.charts.indicators.BARS"
             description="Bars"
-            exclusive="false"
             id="org.eclipsetrader.indicators.bars"
+            location="top"
             name="BAR">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.top"
             class="org.eclipsetrader.ui.charts.indicators.BBANDS"
             description="Bollinger Bands"
             exclusive="false"
             id="org.eclipsetrader.indicators.bbands"
+            location="top"
             name="BBANDS">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.BOP"
             description="Balance Of Power"
             id="org.eclipsetrader.indicators.bop"
+            location="bottom"
             name="BOP">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.CCI"
             description="Commodity Channel Index"
             id="org.eclipsetrader.indicators.cci"
+            location="bottom"
             name="CCI">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.CMO"
             description="Chande Momentum Oscillator"
             id="org.eclipsetrader.indicators.cmo"
+            location="bottom"
             name="CMO">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.DX"
             description="Directional Movement Index"
             id="org.eclipsetrader.indicators.dx"
+            location="bottom"
             name="DX">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.top"
             class="org.eclipsetrader.ui.charts.indicators.LINEARREG"
             description="Linear Regression"
             id="org.eclipsetrader.indicators.linearreg"
+            location="top"
             name="LINEARREG">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.top"
             class="org.eclipsetrader.ui.charts.indicators.MA"
             description="Moving Average"
             exclusive="false"
             id="org.eclipsetrader.indicators.ma"
+            location="top"
             name="MA">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.MACD"
             description="M/A Convergence/Divergence"
             id="org.eclipsetrader.indicators.macd"
+            location="bottom"
             name="MACD">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.MFI"
             description="Money Flow Index"
             id="org.eclipsetrader.indicators.mfi"
+            location="bottom"
             name="MFI">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.MOM"
             description="Momentum"
             id="org.eclipsetrader.indicators.mom"
+            location="bottom"
             name="MOM">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.NATR"
             description="Normalized Average True Range"
             id="org.eclipsetrader.indicators.natr"
+            location="bottom"
             name="NATR">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.OBV"
             description="On Balance Volume"
             id="org.eclipsetrader.indicators.obv"
+            location="bottom"
             name="OBV">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.PPO"
             description="Percentage Price Oscillator"
             id="org.eclipsetrader.indicators.ppo"
+            location="bottom"
             name="PPO">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.ROC"
             description="Rate of Change"
             id="org.eclipsetrader.indicators.roc"
+            location="bottom"
             name="ROC">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.RSI"
             description="Relative Strength Index"
             id="org.eclipsetrader.indicators.rsi"
+            location="bottom"
             name="RSI">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.SAR"
             description="Parabolic SAR"
             id="org.eclipsetrader.indicators.sar"
+            location="bottom"
             name="SAR">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.STOCH"
             description="Stochastic"
             id="org.eclipsetrader.indicators.stoch"
+            location="bottom"
             name="STOCH">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.STOCHRSI"
             description="Stochastic RSI"
             id="org.eclipsetrader.indicators.stochrsi"
+            location="bottom"
             name="STOCHRSI">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.SUM"
             description="Summation"
             id="org.eclipsetrader.indicators.sum"
+            location="bottom"
             name="SUM">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.TRANGE"
             description="True Range"
             id="org.eclipsetrader.indicators.trange"
+            location="bottom"
             name="TRANGE">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.TRIX"
             description="1-day ROC of a Triple Smooth EMA"
             id="org.eclipsetrader.indicators.trix"
+            location="bottom"
             name="TRIX">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.TSF"
             description="Time Series Forecast"
             id="org.eclipsetrader.indicators.tsf"
+            location="bottom"
             name="TSF">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.TYPPRICE"
             description="Typical Price"
             id="org.eclipsetrader.indicators.typprice"
+            location="bottom"
             name="TYPPRICE">
       </indicator>
       <indicator
-            category="org.eclipsetrader.ui.charts.indicators"
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
             class="org.eclipsetrader.ui.charts.indicators.ULTOSC"
             description="Ultimate Oscillator"
             id="org.eclipsetrader.indicators.ultosc"
+            location="bottom"
             name="ULTOSC">
       </indicator>
       <indicator
             class="org.eclipsetrader.ui.charts.indicators.VOLUME"
             description="Volume"
             id="org.eclipsetrader.indicators.volume"
+            location="bottom"
             name="VOL">
+      </indicator>
+      <indicator
+            category="org.eclipsetrader.ui.charts.indicators.bottom"
+            class="org.eclipsetrader.ui.charts.indicators.VAR"
+            description="Variance"
+            id="org.eclipsetrader.indicators.var"
+            location="bottom"
+            name="VAR">
       </indicator>
    </extension>
    <extension
@@ -630,6 +671,17 @@
             <test
                   property="org.eclipsetrader.ui.chartObjectFactory"
                   value="org.eclipsetrader.indicators.linearreg">
+            </test>
+         </enabledWhen>
+      </page>
+      <page
+            class="org.eclipsetrader.ui.internal.charts.indicators.VARPropertiesPage"
+            id="org.eclipsetrader.ui.charts.indicators.var"
+            name="Indicator">
+         <enabledWhen>
+            <test
+                  property="org.eclipsetrader.ui.chartObjectFactory"
+                  value="org.eclipsetrader.indicators.var">
             </test>
          </enabledWhen>
       </page>
